fixed footer spacing issue, and readme text

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,10 +37,7 @@ p {
 
 .col-md-4 {
     
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 25px;
     margin-left: 25px;
     margin-right: 25px;
 }  
@@ -64,6 +61,9 @@ p {
     padding-right: 25px;
 }
 
+.container {
+    margin-bottom: 100px;
+}
 footer {
     position: fixed;
     left: 0;
